fix: removed the stickiness of the image-gallery on mobile view

--- a/src/app/pages/product-detail/product-detail.component.css
+++ b/src/app/pages/product-detail/product-detail.component.css
@@ -82,6 +82,14 @@
   height: fit-content;
 }
 
+/* Remove sticky positioning on mobile */
+@media (max-width: 968px) {
+  .image-gallery {
+    position: relative;
+    top: auto;
+  }
+}
+
 .main-image {
   width: 100%;
   aspect-ratio: 1;
